0022937: Wrong delete operator in GeomFill_EvolvedSection.cxx / GeomFill_UniformSection.cxx