src/GeomFill/GeomFill_EvolvedSection.cxx
@@ -47,10 +47,9 @@ GeomFill_EvolvedSection::GeomFill_EvolvedSection(const Handle(Geom_Curve)& C,
 
 #if DRAW
   if (Affich) {
-    char*  name = new char[100];
+    char name[256];
     sprintf(name,"UnifSect_%d",++NumSec);
     DrawTrSurf::Set(name, myCurve);
-    delete name;
   }
 #endif
 }
